Add auth local and fix homepage

--- a/src/app/_layout/nav-bar.html
+++ b/src/app/_layout/nav-bar.html
@@ -8,10 +8,10 @@
         <a href="/home">
           <i class="fa fa-book icon_of_menu_holizontal" aria-hidden="true"></i> Môn Học</a>
       </li>
-      <!-- <li>
-        <a href="/progess/?subject=math">
-          <i class="fa fa-bar-chart icon_of_menu_holizontal" aria-hidden="true"></i> Tiến Trình</a>
-      </li> -->
+      <li>
+        <a href="{{ router.url('get:all:keyed') }}">
+          <i class="fa fa-bar-chart icon_of_menu_holizontal" aria-hidden="true"></i> Bí quyết mùa thi</a>
+      </li>
       <li>
         <a href="{{ router.url('get:all:news') }}">
           <i class="fa fa-newspaper-o icon_of_menu_holizontal" aria-hidden="true"></i> Tin Tức</a>
@@ -37,10 +37,10 @@
         <a href="/home/math">
           <i class="fa fa-book icon_of_menu_holizontal" aria-hidden="true"></i> Môn Học</a>
       </li>
-      <!-- <li>
-        <a href="/progess/?subject=math">
-          <i class="fa fa-bar-chart icon_of_menu_holizontal" aria-hidden="true"></i> Tiến Trình</a>
-      </li> -->
+      <li>
+        <a href="{{ router.url('get:all:keyed') }}">
+          <i class="fa fa-bar-chart icon_of_menu_holizontal" aria-hidden="true"></i> Bí quyết mùa thi</a>
+      </li>
       <li>
         <a href="{{ router.url('get:all:news') }}">
           <i class="fa fa-newspaper-o icon_of_menu_holizontal" aria-hidden="true"></i> Tin Tức</a>
