--- a/src/app/_layout/header.html
+++ b/src/app/_layout/header.html
@@ -1,7 +1,7 @@
 <div id="header">
   <nav class="white">
     <div class="nav-wrapper nav-wrapper-login">
-      <a href="/home/math">
+      <a href="/home">
         <b id="logo" style="font-size: 20px;">
           <span style="color: rgb(66, 133, 244);">T</span><span style="color: rgb(234, 67, 53);">h</span><span style="color: rgb(243, 156, 18);">i</span><span style="color: rgb(52, 168, 83);">d</span><span style="color: rgb(234, 67, 53);">a</span><span style="color: rgb(66, 133, 244);">i</span><span style="color: rgb(243, 156, 18);">h</span><span style="color: rgb(52, 168, 83);">o</span><span style="color: rgb(66, 133, 245);">c</span><span style="color: rgb(234, 67, 53);">.</span><span style="color: rgb(52, 168, 83);">o</span><span style="color: rgb(66, 133, 244);">n</span><span style="color: rgb(234, 67, 53);">l</span><span style="color: rgb(243, 156, 18);">i</span><span style="color: rgb(52, 168, 83);">n</span><span style="color: rgb(234, 67, 53);">e</span>
         </b>
@@ -9,16 +9,13 @@
       {% if not user %}
         <ul class="right hide-on-med-and-down ">
           <li class="about-us-header">
-            <a href="#" class="black-text menu">
-              <i class="fa fa-globe fa" aria-hidden="true"></i> Về chúng tôi</a>
+            <a href="#" class="black-text menu">Về chúng tôi</a>
           </li>
           <li>
-            <a href="#modal1" class="black-text menu">
-              <i class="fa fa-sign-in fa" aria-hidden="true"></i> Đăng nhập</a>
+            <a href="#modal1" class="black-text menu">Đăng nhập</a>
           </li>
           <li>
-            <a href="#modal2" class="black-text menu">
-              <i class="fa fa-heartbeat" aria-hidden="true"></i> Đăng ký thành viên</a>
+            <a href="#modal2" class="black-text menu">Đăng ký thành viên</a>
           </li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
@@ -39,89 +36,62 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-header center">
-      <div style="margin-top: 30px; margin-bottom: 0px;">
-        <img src="/images/main_logo_techkid.png">
-      </div>
     </div>
     <div class="modal-content">
       <div class="row">
         <form action="/login" method="POST" class="col s12">
-
-          <div class="row">
-            <div class="input-field col s12">
-              <input type="text" name="username" class="validate">
-              <label for="email">Tên đăng nhập</label>
-            </div>
+          <div class="input-field col s12">
+            <input id="emailLogin" type="email" name="username" class="validate">
+            <label for="emailLogin">Email</label>
           </div>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <input type="password" name="password" class="validate">
-              <label for="password">Mật khẩu</label>
-            </div>
+          <div class="input-field col s12">
+            <input id="passwordLogin" type="password" name="password" class="validate">
+            <label for="passwordLogin">Mật khẩu</label>
           </div>
 
-          <div class="row">
-            <div class="col s12 center">
-              <button type="submit" class="waves-effect waves-light btn green">Đăng nhập</button>
-            </div>
+          <div class="col s12 center">
+            <button type="submit" class="waves-effect waves-light btn blue" id="btnLogin">Đăng nhập</button>
           </div>
         </form>
-
         <form action="/auth/google" method="GET">
           <div class="row">
             <div class="col s12 center">
-              <button id="login-fb-button" type="submit" class="waves-effect waves-light btn green">Đăng nhập bằng tài khoản Google</button>
+              <button id="login-fb-button" type="submit" class="waves-effect waves-light btn" style="background: #df360a;">Đăng nhập bằng tài khoản Google</button>
             </div>
           </div>
         </form>
-
       </div>
     </div>
   </div>
 
   <div id="modal2" class="modal modal-signup">
-    <div class="modal-header center">
-      <div style="margin-top: 30px; margin-bottom: 0px;">
-        <img src="/images/main_logo_techkid.png">
-      </div>
-    </div>
+    <div class="signup-message" style="display: none;"></div>
     <div class="modal-content">
       <div class="row">
-        <form action="users/signup" method="POST" class="col s12">
-
-          <div class="row">
-            <div class="input-field col s12">
-              <input type="text" name="username" class="validate">
-              <label >Tên đăng nhập</label>
-            </div>
+        <form action="/signup" method="POST" class="col s12 formSignup">
+          <div class="input-field col s12">
+            <input id="usernameSignup" type="text" name="username" class="validate">
+            <label>Tên người dùng</label>
           </div>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <input type="email" name="email" class="validate">
-              <label for="email">Email</label>
-            </div>
+          <div class="input-field col s12">
+            <input id="emailSignup" type="text" name="email">
+            <label>Email</label>
           </div>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <input type="password" name="password" class="validate">
-              <label for="password">Mật khẩu</label>
-            </div>
+          <div class="input-field col s12">
+            <input id="passwordSignup" type="password" name="password" class="validate">
+            <label>Mật khẩu</label>
           </div>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <input id="re-password" type="password" name="re_password" class="validate">
-              <label for="re-password">Nhập lại mật khẩu</label>
-            </div>
+          <div class="input-field col s12">
+            <input id="rePasswordSignup" type="password" name="re_password" class="validate">
+            <label>Nhập lại mật khẩu</label>
           </div>
 
-          <div class="row">
-            <div class="col s12 center">
-              <button id="signup-button" type="submit" class="waves-effect waves-light btn green">Đăng ký</button>
-            </div>
+          <div class="col s12 center">
+            <button id="signup-button" type="submit" class="waves-effect waves-light btn blue btnSignup">Đăng ký thành viên</button>
           </div>
         </form>
       </div>
