--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -6,7 +6,7 @@
   <div class="row">
     <h3 class="center-align">ĐỀ THI CÁC MÔN</h3>
     <div class="col s12 m4">
-      <div class="card">
+      <div class="card hoverable">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="images/math.jpg">
         </div>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="col s12 m4">
-      <div class="card">
+      <div class="card hoverable">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="images/ly.jpg">
         </div>
@@ -54,7 +54,7 @@
     </div>
 
     <div class="col s12 m4">
-      <div class="card">
+      <div class="card hoverable">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="images/hoa.jpg">
         </div>
@@ -78,7 +78,7 @@
     </div>
 
     <div class="col s12 m4">
-      <div class="card">
+      <div class="card hoverable">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="images/sinh.jpg">
         </div>
@@ -102,7 +102,7 @@
     </div>
 
     <div class="col s12 m4">
-      <div class="card">
+      <div class="card hoverable">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="images/anh.jpg">
         </div>
@@ -126,7 +126,7 @@
     </div>
 
     <div class="col s12 m4">
-      <div class="card">
+      <div class="card hoverable">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="images/dia.jpg">
         </div>
