--- a/src/app/news/news-add.html
+++ b/src/app/news/news-add.html
@@ -65,7 +65,7 @@
     $(addNewsPageReaddy)
 
     function addNewsPageReaddy() {
-      $('select').material_select();
+      $('select').material_select()
       var $btnFileUpload = $('input[name="fileUpload"]')
       var $inputFilePath = $('input[name="imageLink"]')
       var $inputTitle = $('input[name="title"]')
