--- a/src/app/news/news-edit.html
+++ b/src/app/news/news-edit.html
@@ -31,6 +31,15 @@
         </div>
 
         <div class="input-field col s12">
+          <select name="isNews">
+            <option value="" disabled selected>Chọn thể loại bài viết</option>
+            <option value="1">Tin tức tuyển sinh mới</option>
+            <option value="0">Bí kíp mùa thi</option>
+          </select>
+          <label>Thể loại bài viết</label>
+        </div>
+
+        <div class="input-field col s12">
           <textarea id="editor2" class="editor2" placeholder="Nội dung bài viết..." name="content" required>{{ news.content }}</textarea>
         </div>
 
@@ -53,6 +62,7 @@
     $(addNewsPageReaddy)
 
     function addNewsPageReaddy() {
+      $('select').material_select()
       var $btnFileUpload = $('input[name="fileUpload"]')
       var $inputFilePath = $('input[name="imageLink"]')
       var $inputTitle = $('input[name="title"]')
