--- a/src/app/_layout/footer.html
+++ b/src/app/_layout/footer.html
@@ -6,7 +6,7 @@
           <h5 class="white-text ">Thidaihoc.online</h5>
           <div class="row valign-wrapper ">
             <div class="col s2 ">
-              <img style="background: white; " src="/images/logo.png " class="circle responsive-img ">
+              <img style="background: white; " src="/images/logo2.png " class="circle responsive-img ">
             </div>
             <div class="col s10 ">
               <span class="white-text ">
