--- a/src/app/dashboard/dashboard-subjects.html
+++ b/src/app/dashboard/dashboard-subjects.html
@@ -5,10 +5,8 @@
 
 {% block content %}  
 {% include "_layout/nav-bar.html" %}
-<div class="row">
-  <div class="col s2 l2">
-  </div>
-  <div class="col s8 l8">
+<div class="row z-depth-2">
+  <div class="col s12 m8 offset-m1">
     <div class="row">
       <div class="col s12 l12">
         <div class="block_slidedown quote">
@@ -20,22 +18,6 @@
           </blockquote>
         </div>
         <br>
-<!-- 
-        <div id="search" class="block_slidedown">
-          <div class="">
-            <i class="fa fa-search" aria-hidden="true">Tìm kiếm bài thi</i>
-            <div class="row">
-              <div class="col s8 l10">
-                <input type="text" id="key" onkeydown="onEnterKey()">
-              </div>
-              <div class="col s4 l2">
-                <div class="btn" onclick="search()">Tìm</div>
-              </div>
-            </div>
-            <div id="result"></div>
-          </div>
-        </div>
-        <br> -->
 
         <div class="block_slidedown">
           <h6> Danh sách đề thi:</h6>
@@ -47,9 +29,7 @@
                   <div class="collapsible-header name_of_exam">
                     <i class="fa fa-angle-double-right" aria-hidden="true"></i>{{ exam.name }}</div>
                   <div class="collapsible-body">
-                    <div>Facebook is an American for-profit corporation and an online social media and social networking service based in Menlo
-                      Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along with fellow Harvard
-                      College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes.</div>
+                    <div>Facebook is an American for-profit corporation and an online social</div>
                     <div class="center">
                       <a class="waves-effect waves-light btn" href="/exam?nameOfExam={{ exam.name }}&subject={{ exam.subject }}">Làm đề thi</a>
                     </div>
@@ -70,9 +50,7 @@
                   <div class="collapsible-header name_of_exam">
                     <i class="fa fa-angle-double-right" aria-hidden="true"></i>{{ exam.name }}</div>
                   <div class="collapsible-body">
-                    <div>Facebook is an American for-profit corporation and an online social media and social networking service based in Menlo
-                      Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along with fellow Harvard
-                      College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes.</div>
+                    <div>Facebook is an American for-profit corporation and an online social</div>
                     <div class="center">
                       <a class="waves-effect waves-light btn" href="/exam?nameOfExam={{ exam.name }}&subject={{ exam.subject }}">Làm đề thi</a>
                     </div>
@@ -93,9 +71,7 @@
                   <div class="collapsible-header name_of_exam">
                     <i class="fa fa-angle-double-right" aria-hidden="true"></i>{{ exam.name }}</div>
                   <div class="collapsible-body">
-                    <div>Facebook is an American for-profit corporation and an online social media and social networking service based in Menlo
-                      Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along with fellow Harvard
-                      College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes.</div>
+                    <div>Facebook is an American for-profit corporation and an online social</div>
                     <div class="center">
                       <a class="waves-effect waves-light btn" href="/exam?nameOfExam={{ exam.name }}&subject={{ exam.subject }}">Làm đề thi</a>
                     </div>
@@ -108,7 +84,7 @@
       </div>
     </div>
   </div>
-  <div class="col s2 l2">
+  <div class="col s12 m2">
     <h6 class='center'>
       <i class="fa fa-star-half-o yellow-text fa-lg" aria-hidden="true"></i> Top Ranking</h3>
       <div class="divider"></div>
