--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -6,19 +6,6 @@
   left: 0px;
 }
 
-.menu{
-  font-size: 18px;
-}
-
-#logo{
-  max-width: 100%;
-  max-height: 100%;
-  position: absolute;
-  top: 0px;
-  left: 50%;
-  margin-left: -100px;
-}
-
 .turned_in{
   background-color: white;
   border-radius: 10px;
@@ -34,10 +21,6 @@
 
 .about_us{
   margin: 20px 0px;
-}
-
-.nav-wrapper-login{
-  height: 500px;
 }
 
 .index-banner{
@@ -62,4 +45,8 @@ body {
 }
 p {
   margin: 1.3em 0 2.5em;
+}
+
+.logo-main {
+  width: 125px;
 }
