--- a/src/app/_layout/nav-bar.html
+++ b/src/app/_layout/nav-bar.html
@@ -21,17 +21,19 @@
           <i class="fa fa-commenting icon_of_menu_holizontal" aria-hidden="true"></i> Phòng trò chuyện</a>
       </li>
     </ul>
-    <div class="right" style="max-height:100%">
-      <span id='block_avatar'>
-        <img id='avatar' src="{{ user.avatar }}" alt="avatar"> {{ user.username }}
-        <i class="fa fa-caret-down dropdown-button" aria-hidden="true" data-beloworigin="true" data-activates='dropdown' style="height:15px"></i>
-        <ul class='dropdown-content' id='dropdown'>
-          <li>
-            <a href="/logout">Đăng xuất</a>
-          </li>
-        </ul>
-      </span>
-    </div>
+    <ul class="right" style="max-height:100%">
+      <a class="dropdown-button" data-activates="dropdownProfile">
+        <img src="{{ user.avatar }}" class="avatar-image hide-on-small-only">
+        <span>{{ user.username }}</span>
+        <i class="fa fa-caret-down"></i>
+      </a>
+    </ul>
+    <ul class="dropdown-content" id="dropdownProfile">
+      <li>
+        <a href="#">Thông tin cá nhân</a>
+        <a href="/logout">Đăng xuất</a>
+      </li>
+    </ul>
     <ul class="side-nav" id="mobile-demo">
       <li class="active">
         <a href="/home/math">
