--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -55,3 +55,11 @@ p {
   border-radius: 40px;
   vertical-align: middle;
 }
+
+.container-new {
+  width: 90%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
