--- a/src/app/exams/exams.html
+++ b/src/app/exams/exams.html
@@ -4,13 +4,13 @@
 {% endblock %}
 {% block content %}
 <div class="row">
-  <div class="col s9 l9">
+  <div class="col s12 m9" style="height: 1000px;">
     <object type="application/pdf" width="100%" height="1400px" data="{{ exam.examspath }}?#zoom=120&scrollbar=0&toolbar=0&navpanes=0"
       id="pdf_content">
-      <p>ERROR</p>
+      <p>Không thể load file. Làm ơn load lại trang</p>
     </object>
   </div>
-  <div class="col s3 l3">
+  <div class="col s12 m3">
     <div class="container">
       <div class="timer green">
         <div class="cell">
