--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -102,3 +102,22 @@ menu-holizontal{
   margin-left: 10%;
   margin-right: 10%;
 }
+
+.link-news {
+  color: #151515;
+  margin: 10px 0 0 0;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: left;
+}
+.link-news:hover {
+  color: #42a5f5;
+}
+
+.new-card-content {
+  padding: 10px 10px 10px 24px !important;
+}
+
+.news-card-action {
+  padding: 10px 24px !important;
+}
