--- a/src/app/_layout/footer.html
+++ b/src/app/_layout/footer.html
@@ -10,8 +10,7 @@
             </div>
             <div class="col s10 ">
               <span class="white-text ">
-                Website là nơi cung cấp tài nguyên học tập, các phương tiện tương tác giữa giảng viên và sinh viên trong hoạt động giảng
-                dạy và học tập. Website được phát triển trên nền tảng Nodejs.
+                Website là nơi cung cấp tài nguyên học tập, ôn thi các đề thi THPT và đại học. Web được phát triển trên nền tảng NodeJS
               </span>
             </div>
           </div>
