--- a/src/app/exams/exams.html
+++ b/src/app/exams/exams.html
@@ -7,7 +7,7 @@
   <div class="col s12 m9" style="height: 1000px;">
     <object type="application/pdf" width="100%" height="1400px" data="{{ exam.examspath }}?#zoom=120&scrollbar=0&toolbar=0&navpanes=0"
       id="pdf_content">
-      <p>Không thể load file. Làm ơn load lại trang</p>
+      <p>Bài thi không hỗ trợ trên trình duyệt điện thoại. Mời bạn load lại trang hoặc chuyển sang PC</p>
     </object>
   </div>
   <div class="col s12 m3">
