--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -14,24 +14,20 @@
     <div class="col s12 m6">
       <div class="icon-block">
         <h2 class="center black-text">
-          <i class="material-icons about_us">flash_on</i>
+          <i class="material-icons about_us">group</i>
         </h2>
-        <h5 class="center">Team</h5>
-        <p class="light left-align">Facebook is an American for-profit corporation and an online social media and social networking service based in Menlo
-          Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along with fellow Harvard
-          College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes.
+        <h5 class="center">Đội ngũ xây dựng</h5>
+        <p class="light left-align">Web được phát triển bởi các thành viên là sinh viên của trường Đại học Công Nghê - Đại học Quốc Gia Hà Nội. Là một đội ngũ trẻ, rất nhiệt huyết và có niềm đam mêm lớn với IT.
         </p>
       </div>
     </div>
     <div class="col s12 m6">
       <div class="icon-block">
         <h2 class="center black-text">
-          <i class="material-icons about_us">group</i>
+          <i class="material-icons about_us">flash_on</i>
         </h2>
-        <h5 class="center ">Team</h5>
-        <p class="light left-align">Facebook is an American for-profit corporation and an online social media and social networking service based in Menlo
-          Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along with fellow Harvard
-          College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes.</p>
+        <h5 class="center ">Sứ mệnh</h5>
+        <p class="light left-align">Với lý tưởng là chung tay xây dựng nên một cộng đồng hỗ trợ ôn thi đại học, sứ mệnh của chúng tôi là luôn cố gắng tạo ra những trải nghiệm tốt nhất, những đề thi chất lượng nhất và nhưng tin tức mới nhất về thi đại học hiện nay.</p>
       </div>
     </div>
   </div>
