--- a/src/app/_layout/header.html
+++ b/src/app/_layout/header.html
@@ -52,6 +52,7 @@
             <button type="submit" class="waves-effect waves-light btn blue" id="btnLogin">Đăng nhập</button>
           </div>
         </form>
+        <div>Hoặc</div>
         <form action="/auth/google" method="GET">
           <div class="row">
             <div class="col s12 center">
