--- a/src/app/admin/home.html
+++ b/src/app/admin/home.html
@@ -46,14 +46,14 @@
 
   <div class="col-md-4">
     <div class="card">
-      <img class="card-img-top" src="/admin/img/home/recruitment.jpg">
+      <img class="card-img-top" src="/admin/img/home/exam.jpg">
       <div class="card-block">
         <div class="row">
           <div class="col-md-6">
             <a href="/">
               <div class="quick-stats__item bg-light-blue">
                 <div class="quick-stats__info">
-                  <h2>{{ totalJobDraft }}</h2>
+                  <h2>{{ totalDeleleExams }}</h2>
                   <small>Bài thi đã ẩn</small>
                 </div>
               </div>
@@ -64,7 +64,7 @@
             <a href="/">
               <div class="quick-stats__item bg-amber">
                 <div class="quick-stats__info">
-                  <h2>{{ totalJobPublish }}</h2>
+                  <h2>{{ totalPublishExams }}</h2>
                   <small>Danh sách bài thi</small>
                 </div>
               </div>
@@ -72,7 +72,7 @@
           </div>
 
           <div class="col-6">
-            <a href="/" class="btn btn-outline-success waves-effect btn-block">
+            <a href="/add-exams.html" class="btn btn-outline-success waves-effect btn-block">
               Tạo mới bài thi
             </a>
           </div>
