--- a/src/app/_layout/admin.layout.html
+++ b/src/app/_layout/admin.layout.html
@@ -66,7 +66,7 @@
     
         <ul class="navigation">
           <li class="{{ 'navigation__active' if isCurrentRoute('home') }}">
-            <a href="/admin/home">
+            <a href="/home">
               <i class="zmdi zmdi-home"></i> Home</a>
           </li>
     
