--- a/src/app/admin/home.html
+++ b/src/app/admin/home.html
@@ -77,7 +77,7 @@
             </a>
           </div>
           <div class="col-6">
-            <a href="/" class="btn btn-outline-info waves-effect btn-block">
+            <a href="#" class="btn btn-outline-info waves-effect btn-block">
               Danh sách bài thi
             </a>
           </div>
