--- a/src/app/news/news-edit.html
+++ b/src/app/news/news-edit.html
@@ -1,4 +1,6 @@
-{% extends "_layout/layout.html" %} {% block content %}
+{% extends "_layout/layout.html" %}
+{% block content %}
+{% include "_layout/nav-bar.html" %}
 <div class="row" style="margin-top: 10px;">
   <div class="col s12 m8 offset-m2 z-depth-2">
     <h3 class="center-align light-blue-text">Chỉnh sửa tin tức</h3>
