--- a/src/app/exams/exams.html
+++ b/src/app/exams/exams.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="/css/exam.css">
 {% endblock %}
 {% block content %}
+{% include "_layout/nav-bar.html" %}
 <div class="row">
   <div class="col s12 m9" style="height: 1000px;">
     <object type="application/pdf" width="100%" height="1400px" data="{{ exam.examspath }}?#zoom=120&scrollbar=0&toolbar=0&navpanes=0"
