--- a/src/app/_layout/admin.layout.html
+++ b/src/app/_layout/admin.layout.html
@@ -67,7 +67,7 @@
         <ul class="navigation">
           <li class="{{ 'navigation__active' if isCurrentRoute('home') }}">
             <a href="/home">
-              <i class="zmdi zmdi-home"></i> Home</a>
+              <i class="zmdi zmdi-home"></i> Trang chủ</a>
           </li>
     
           <li class="navigation__sub {{ 'navigation__sub--active navigation__sub--toggled' if isCurrentRoute('get:add:news') or isCurrentRoute('get:all:news') }}">
@@ -90,10 +90,10 @@
     
             <ul>
               <li>
-                <a href="/">Tạo mới đề thi</a>
+                <a href="/add-exams.html">Tạo mới đề thi</a>
               </li>
               <li>
-                <a href="/">Danh sách đề thi</a>
+                <a href="/home">Danh sách đề thi</a>
               </li>
             </ul>
           </li>
@@ -112,11 +112,11 @@
         <p>© Thidaihoc.online. All rights reserved.</p>
       
         <ul class="nav footer__nav">
-          <a class="nav-link" href="/">Trang chủ</a>
+          <a class="nav-link" href="#">Trang chủ</a>
       
-          <a class="nav-link" href="/">Tin tức</a>
+          <a class="nav-link" href="#">Tin tức</a>
       
-          <a class="nav-link" href="/">Đề thi</a>
+          <a class="nav-link" href="#">Đề thi</a>
       
         </ul>
       </footer>
