--- a/src/app/_layout/nav-bar.html
+++ b/src/app/_layout/nav-bar.html
@@ -36,7 +36,7 @@
     </ul>
     <ul class="dropdown-content" id="dropdownProfile">
       <li>
-        <a href="#" data-activates="slide-out" class="button-collapse">Thông tin cá nhân</a>
+        <a href="/profile.html">Thông tin cá nhân</a>
         <a href="/logout">Đăng xuất</a>
       </li>
     </ul>
@@ -56,40 +56,6 @@
       <li>
         <a href="{{ router.url('get:chat-room') }}">
           <i class="fa fa-commenting icon_of_menu_holizontal" aria-hidden="true"></i> Phòng trò chuyện</a>
-      </li>
-    </ul>
-    <ul id="slide-out" class="side-nav">
-      <li>
-        <div class="user-view">
-          <div class="background">
-            <img src="images/office.jpg">
-          </div>
-          <a href="#!user">
-            <img class="circle" src="{{ user.avatar }}">
-          </a>
-          <a href="#!name">
-            <span class="white-text name">John Doe</span>
-          </a>
-          <a href="#!email">
-            <span class="white-text email">jdandturk@gmail.com</span>
-          </a>
-        </div>
-      </li>
-      <li>
-        <a href="#!">
-          <i class="material-icons">cloud</i>First Link With Icon</a>
-      </li>
-      <li>
-        <a href="#!">Second Link</a>
-      </li>
-      <li>
-        <div class="divider"></div>
-      </li>
-      <li>
-        <a class="subheader">Subheader</a>
-      </li>
-      <li>
-        <a class="waves-effect" href="#!">Third Link With Waves</a>
       </li>
     </ul>
   </div>
