--- a/src/app/admin/home.html
+++ b/src/app/admin/home.html
@@ -7,7 +7,7 @@
       <div class="card-block">
         <div class="row">
           <div class="col-md-6">
-            <a href="/">
+            <a href="#">
               <div class="quick-stats__item bg-light-blue">
                 <div class="quick-stats__info">
                   <h2>{{ totalDeleleExams }}</h2>
@@ -18,11 +18,11 @@
           </div>
 
           <div class="col-md-6">
-            <a href="/">
+            <a href="#">
               <div class="quick-stats__item bg-amber">
                 <div class="quick-stats__info">
                   <h2>{{ totalPublishExams }}</h2>
-                  <small>Đã xuất bản</small>
+                  <small>Đang hiển thị</small>
                 </div>
               </div>
             </a>
@@ -50,7 +50,7 @@
       <div class="card-block">
         <div class="row">
           <div class="col-md-6">
-            <a href="/">
+            <a href="#">
               <div class="quick-stats__item bg-light-blue">
                 <div class="quick-stats__info">
                   <h2>{{ totalDeleleExams }}</h2>
@@ -61,11 +61,11 @@
           </div>
 
           <div class="col-md-6">
-            <a href="/">
+            <a href="#">
               <div class="quick-stats__item bg-amber">
                 <div class="quick-stats__info">
                   <h2>{{ totalPublishExams }}</h2>
-                  <small>Danh sách bài thi</small>
+                  <small>Đang hiển thị</small>
                 </div>
               </div>
             </a>
