--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -151,7 +151,7 @@
   </div>
 </div>
 {% endblock %}
-{% block jsCustom %}
+<!-- {% block jsCustom %}
   <script>
     (function pageDashBoardLoadReaddy(cbFn) {
       cbFn(window.jQuery)
@@ -163,4 +163,4 @@
       }
     })
   </script>
-{% endblock %}
+{% endblock %} -->
