--- a/src/app/_layout/header.html
+++ b/src/app/_layout/header.html
@@ -10,13 +10,13 @@
         </a>
         <ul class="right hide-on-med-and-down">
           <li class="about-us-header">
-            <a href="#" class="blue-text">Về chúng tôi</a>
+            <a href="#" class="blue-text nav-header-cus">Về chúng tôi</a>
           </li>
           <li>
-            <a href="#modal1" class="blue-text">Đăng nhập</a>
+            <a href="#modal1" class="blue-text nav-header-cus">Đăng nhập</a>
           </li>
           <li>
-            <a href="#modal2" class="blue-text">Đăng ký thành viên</a>
+            <a href="#modal2" class="blue-text nav-header-cus">Đăng ký thành viên</a>
           </li>
         </ul>
         <ul id="mobile-demo" class="side-nav">
@@ -52,7 +52,9 @@
             <button type="submit" class="waves-effect waves-light btn blue" id="btnLogin">Đăng nhập</button>
           </div>
         </form>
-        <div>Hoặc</div>
+        <div>
+          <div>Hoặc</div>
+        </div>
         <form action="/auth/google" method="GET">
           <div class="row">
             <div class="col s12 center">
