--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -63,3 +63,9 @@ p {
   margin-right: auto;
   margin-left: auto;
 }
+
+.nav-header-cus {
+  font-weight: 500;
+  font-size: 16px;
+  border-left: 1px #eee solid;
+}
